# ColonyAutomata

./: .gitignore  CMakeLists.txt  ColonyAutomata.sln  README.md
ColonyAutomata/: ColonyAutomata.cpp  ColonyAutomata.h  ColonyAutomata.vcxproj  ColonyAutomata.vcxproj.filters  Person.cpp  Person.h  main.cpp
